functionality for full text search
